--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
-.Box2
-{
+*{
+    border: 1px solid red;
+}
+
+.Box {
+    height: 150px;
+    width: 150 px;
+    background-color: aliceblue;
+    font-size: 30pt;
+}
+
+.Parent-container {
     display: flex;
-    justify-content: center;
-    width: 200px;
-    height: 100px;
-    border: 5px solid black
+        .Box
+        {
+            display: flex;
+        }
 } 
