--- a/style.css
+++ b/style.css
@@ -2,17 +2,24 @@
     border: 1px solid red;
 }
 
-.Box {
-    height: 150px;
-    width: 150 px;
-    background-color: aliceblue;
-    font-size: 30pt;
-}
 
-.Parent-container {
-    display: flex;
-        .Box
-        {
-            display: flex;
-        }
-} 
+.Box1 {
+height: 250px;
+width: 500 px;
+background-color: aliceblue;
+}
+.Box3 {
+display: flex;
+height: 250px;
+width:500px;
+flex-direction: column;
+background-color: aliceblue;
+}
+.card {
+display: flex;
+height: 250px;
+width: 500px;
+background-color: aquamarine;
+border: 4px solid black;
+justify-content: center;
+}
