--- a/style.css
+++ b/style.css
@@ -1,25 +1,54 @@
-*{
-    border: 1px solid red;
-}
-
 
 .Box1 {
-height: 250px;
-width: 500 px;
+height: 0px;
+width: 0 px;
 background-color: aliceblue;
 }
 .Box3 {
 display: flex;
 height: 250px;
-width:500px;
+width:285px;
 flex-direction: column;
-background-color: aliceblue;
 }
-.card {
+.Box2 {
 display: flex;
-height: 250px;
-width: 500px;
+height: 0px;
+width: 0px;
+}
+.Box4 {
+display: flex;
+height: 100px;
+width: 900px
+}
+.card1 {
+display: flex;
+height: 70px;
+width: 900px;
 background-color: aquamarine;
-border: 4px solid black;
 justify-content: center;
+}
+.card2 {
+    display: flex;
+    height: 50px;
+    width: 900px;
+    background-color: aquamarine;
+    justify-content: flex-start;
+    }
+.card3 {
+    display: flex;
+    height: 440px;
+    width: 900px;
+    background-color: aquamarine;
+    justify-content: flex-end;
+    }
+.card4  {
+    display: flex;
+    height: px;
+    width: 900px;
+    background-color: aquamarine;
+    justify-content: flex-end;
+    }
+
+.parent-container {
+    border: solid 8px black;
 }
