--- a/style.css
+++ b/style.css
@@ -2,52 +2,63 @@
 .Box1 {
 height: 0px;
 width: 0 px;
-background-color: aliceblue;
+font-size: 20px;
 }
 .Box3 {
 display: flex;
-height: 250px;
-width:285px;
+height: 200px;
+width:430px;
 flex-direction: column;
+font-size: 25px;
 }
 .Box2 {
 display: flex;
 height: 0px;
-width: 0px;
+width: 75px;
+font-size: 18px;
 }
 .Box4 {
 display: flex;
-height: 100px;
-width: 900px
+font-size: 25px;
+height: 0px;
+width: 500px;
 }
+
 .card1 {
 display: flex;
 height: 70px;
-width: 900px;
-background-color: aquamarine;
+width: 750px;
+background-color: lightblue;
 justify-content: center;
 }
 .card2 {
     display: flex;
     height: 50px;
-    width: 900px;
-    background-color: aquamarine;
+    width: 750px;
+    background-color: lightblue;
     justify-content: flex-start;
     }
 .card3 {
     display: flex;
-    height: 440px;
-    width: 900px;
-    background-color: aquamarine;
+    height: 200px;
+    width: 750px;
+    background-color: lightblue;
     justify-content: flex-end;
     }
 .card4  {
     display: flex;
-    height: px;
-    width: 900px;
-    background-color: aquamarine;
-    justify-content: flex-end;
+    height: 150px;
+    width: 750px;
+    background-color: lightblue;
     }
+
+.image {
+    display: flex;
+    height: 250px;
+    width: 300px;
+    border: 2px sold darkblue;
+}
+
 
 .parent-container {
     border: solid 8px black;
