--- a/style.css
+++ b/style.css
@@ -36,30 +36,25 @@ justify-content: center;
     height: 50px;
     width: 750px;
     background-color: lightblue;
-    justify-content: flex-start;
+    justify-content: center;
     }
 .card3 {
     display: flex;
-    height: 200px;
+    height: 350px;
     width: 750px;
     background-color: lightblue;
     justify-content: flex-end;
     }
-.card4  {
-    display: flex;
-    height: 150px;
-    width: 750px;
-    background-color: lightblue;
-    }
 
-.image {
+.image img {
     display: flex;
-    height: 250px;
-    width: 300px;
+    height: auto;
+    width: 200px;
     border: 2px sold darkblue;
+    padding-left: 30px; 
+    padding-bottom: 2000px; 
 }
 
-
-.parent-container {
-    border: solid 8px black;
+.image-text {
+    align-items: center; 
 }
